--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,9 +1,5 @@
 pipeline {
-    agent {
-        node{
-            label 'agent1'
-        }
-    }
+    agent any
 
     stages {
         stage('Hello') {
